MDEV-324: SHOW EXPLAIN: Plan produced by SHOW EXPLAIN for a query with TEMPTABLE view loses 'DERIVED' line - Make SHOW EXPLAIN code take into account that st_select_lex object without joins can be   a full-featured SELECTs which were already executed and cleaned up.